fix home paragraph spacing

--- a/src/styles/home-style.css
+++ b/src/styles/home-style.css
@@ -26,7 +26,7 @@ h2{
     font-size: 12px;
     color: #FFF;
     text-align: center;
-    padding: 50px 120px;
+    padding: 50px 50px;
     text-align: justify;
     line-height: 1.5;
 }
